fix some inaccurate text and new brand/store name fields not showing new entrys

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,6 +44,7 @@ h3 {
   text-align: center;
 }
 
-.index_field {
+input {
   color: black;
+  background-color: white;
 }
